--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
       <h2>My Personal Information</h2>
     </div>
     <div class="photo-part">
-      <img src="/profile-photo.jpeg" alt="profile-photo">
+      <img src="https://storage.cloud.google.com/web-task-bucket/profile-photo.jpeg?authuser=3" alt="profile-photo">
       <h3>John Doe</h3>
       <p>Junior Product Manager</p>
     </div>
@@ -43,8 +43,8 @@
       <h4>Find Me In!</h4>
     </div>
     <div class="socmed">
-      <a href="https://github.com/hanifnml"><img src="/github.png" alt="github"></a>
-      <a href="https://www.linkedin.com/in/hanif-nurmilasari/"><img src="/linkedin.png" alt="linkedin"></a>
+      <a href="https://github.com/hanifnml"><img src="https://storage.cloud.google.com/web-task-bucket/github.png?authuser=3" alt="github"></a>
+      <a href="https://www.linkedin.com/in/hanif-nurmilasari/"><img src="https://storage.cloud.google.com/web-task-bucket/linkedin.png?authuser=3" alt="linkedin"></a>
     </div>
   </footer>
 </body>
