--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="photo-part">
       <img src="https://storage.cloud.google.com/web-task-bucket/profile-photo.jpeg?authuser=3" alt="profile-photo">
-      <h3>John Doe</h3>
+      <h3>Hanif Nurmilasari</h3>
       <p>Junior Product Manager</p>
     </div>
   </header>
@@ -23,9 +23,9 @@
     <div class="personal-info">
       <h4>Personal Information</h4>
       <hr/>
-      <p>Age: <span>25 years old</span></p>
+      <p>Age: <span>22 years old</span></p>
       <p>Phone: <span>+62 8123-4567-890</span></p>
-      <p>Email: <span>john@example.com</span></p>
+      <p>Email: <span>hanif.nmls@gmail.com</span></p>
     </div>
 
     <div class="my-story">
@@ -33,8 +33,8 @@
         My Story
       </h4>
       <hr/>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam maiores rerum fugiat laborum tenetur doloremque iste atque ratione aliquid necessitatibus quae doloribus explicabo dignissimos animi sequi, architecto amet veniam quibusdam.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur debitis rem eveniet accusantium ad labore iusto nesciunt excepturi ex porro assumenda esse, dolorum natus, quod ducimus voluptatum! A, totam deleniti!</p>
+      <p>I am an undergraduate student majoring in Mathematics in Sebelas Maret University. Passionate in product management and currently working as a full-time product manager at ProSpace. Learning tech and product bring me such joy experience.</p>
+      <p>Eventhough I have worked. As a 22 eyars old that I count as young, I have more targets that I want to achieve in the future. But currently I still focusing on improve my own skills both in product managerial skills and expecially things relate to business aspect.</p>
     </div>
   </main>
 
