--- a/templates/index.html
+++ b/templates/index.html
@@ -13,9 +13,9 @@
       <h2>My Personal Information</h2>
     </div>
     <div class="photo-part">
-      <img src="https://storage.cloud.google.com/web-task-bucket/profile-photo.jpeg?authuser=3" alt="profile-photo">
+      <img src="https://storage.googleapis.com/web-task-bucket/profile-photo.jpg" alt="profile-photo">
       <h3>Hanif Nurmilasari</h3>
-      <p>Junior Product Manager</p>
+      <p>Associate Product Manager</p>
     </div>
   </header>
 
@@ -24,7 +24,7 @@
       <h4>Personal Information</h4>
       <hr/>
       <p>Age: <span>22 years old</span></p>
-      <p>Phone: <span>+62 8123-4567-890</span></p>
+      <p>Address: <span>Sragen, Jawa Tengah</span></p>
       <p>Email: <span>hanif.nmls@gmail.com</span></p>
     </div>
 
